# vala-win

./: CMakeLists.txt
